<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:text="@string/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:text="@string/button5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button6" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/button"
        android:layout_height="40dp"
        android:background="#FFFA70" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button8" />
    
     <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/button"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button28" />

</LinearLayout>