<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttoneee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button0" />

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/myfirsttextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:drawablePadding="20dp"
                android:ellipsize="middle"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/hello_world"
                android:textColor="#aaa111"
                android:textSize="40sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/myfirstedittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/zhanghao"
                android:inputType="text" />

            <EditText
                android:id="@+id/myfirstedittext1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/edittexthint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/myfirstbutton"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:hint="@string/button" />

            <RadioGroup
                android:id="@+id/myfirstradiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="老贾你好美"
                    android:text="@string/pm1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="老贾你好骚"
                    android:text="@string/pm2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="老贾是"
                    android:text="@string/pm3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="老贾是二逼"
                    android:text="@string/pm4" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/myfirstcheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/checkrm" />

            <CheckBox
                android:id="@+id/mysecondcheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/checklogin" />

            <Switch
                android:id="@+id/myfristswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/myfirstToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/myfristImageView "
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/aaa" />

            <ProgressBar
                android:id="@+id/myfristprogressbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/mysecondprogressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="20" />

            <SeekBar
                android:id="@+id/myfristseekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RatingBar
                android:id="@+id/myfristratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5" />
            
             <Button
                android:id="@+id/myfirstbutton00"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:hint="@string/button00" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>